--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,14 @@
 title: Luke Hall
-theme: minimal-mistakes-jekyll  # Or another custom theme
+theme: jekyll-theme-dinky
+
+# Custom navigation links
+header_pages:
+  - Home
+  - About
+navigation:
+  - name: "GitHub"
+    link: "https://github.com/HallL415/Optimisation"
+  - name: "LinkedIn"
+    link: "https://www.linkedin.com/in/your-linkedin-profile"
+  - name: "Email"
+    link: "mailto:your-email@example.com"
